# nautobot-attachment

./: README.md  pyproject.toml
nautobot_attachment/: __init__.py  admin.py  models.py  template_content.py  urls.py  views.py
nautobot_attachment/migrations/: 0001_initial.py  0002_rename_animal_attachment.py  0003_remove_attachment_name.py  0004_attachment_created.py  0005_rename_location_attachment_parent.py
nautobot_attachment/templates/nautobot_attachment/: attachments.html
