[tool.poetry]
name = "nautobot_attachment"
version = "0.1.0"
description = "Add attachments to objects"
authors = ["Alexis Panagiotopoulos <apanagio@enomix.gr>"]
license = "GPL v2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
